1. global-overriding vue-material scss should not be put in common.scss. Import it once in main.js instead 2. fix issue #55 on iOS :hover state persists. Use :active to prevent unwanted visual effect

--- a/src/styles/vue-material.scss
+++ b/src/styles/vue-material.scss
@@ -1,3 +1,5 @@
+@import "~vue-material/dist/theme/engine";
+
 @include md-register-theme("default", (
     primary: $theme-color,
     text-primary-on-primary: white,
@@ -18,4 +20,19 @@
 
 .md-list-item-content {
     padding: 6px 16px;
+}
+
+.md-list.md-theme-default .md-list-item-container:not(.md-list-item-default):not([disabled]):hover {
+    background-color: transparent;
+}
+
+.md-list.md-theme-default .md-list-item-container:not(.md-list-item-default):not([disabled]):active {
+    background-color: rgba(0,0,0,0.12);
+    background-color: var(--md-theme-default-divider-on-background, rgba(0,0,0,0.12));
+    color: rgba(0,0,0,0.87);
+    color: var(--md-theme-default-text-primary-on-background, rgba(0,0,0,0.87));
+}
+
+.md-button:not([disabled]):hover:before {
+    background-color: transparent;
 }
